# attago-py-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
attago/: __init__.py  agent.py  api_keys.py  auth.py  bundles.py  client.py  data.py  errors.py  listener.py  mcp.py  messaging.py  payments.py  push.py  redeem.py  subscriptions.py  types.py  wallets.py  webhooks.py  x402.py
tests/: conftest.py  test_agent.py  test_auth.py  test_client.py  test_data.py  test_errors.py  test_listener.py  test_mcp.py  test_messaging.py  test_services.py  test_webhooks.py  test_x402.py
tests/conformance/: test_conformance.py
