[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attago"
version = "0.1.0"
description = "Python SDK for the AttaGo crypto trading dashboard API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AttaGo", email = "sdk@attago.io" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[project.urls]
Homepage = "https://attago.bid"
Repository = "https://github.com/AttaGo/attago-py-sdk"
Documentation = "https://attago.bid/docs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["conformance: conformance tests against live API"]
